# streamvis

./: .gitignore  AGENTS.md  BACKLOG.md  README.md  config.toml  http_client.py  pyproject.toml  scheduler_harness.py  streamvis.py  streamvis_monolith.py  web_curses.py  web_entrypoint.py
.github/workflows/: ci.yml
notes/: BACKLOG.md  CHAT.md  COMMUNITY_AGGREGATOR.md  LLM_CONFIG_PROMPT.md  MEMORY.md  SCRUTINY.md  WORKLOG.md
serverless/: community_worker.js
streamvis/: __init__.py  __main__.py  config.py  constants.py  gauges.py  location.py  scheduler.py  state.py  tui.py  types.py  utils.py
streamvis/usgs/: __init__.py  adapter.py  ogcapi.py  waterservices.py
tests/: test_nearby.py  test_scheduler.py  test_usgs_adapter.py  test_usgs_parsing.py  test_web_bundle.py
web/: index.html  main.js
