[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamvis"
version = "0.1.0"
description = "CLI to view Snoqualmie River USGS gauge status."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ethan", email = "ethan@example.com" }
]
dependencies = [
  "requests>=2.31",
]

[project.scripts]
streamvis = "streamvis:main"

[tool.setuptools]
# streamvis is intentionally lightweight, but ships a few small support
# modules (HTTP abstraction and optional web/TUI shims). Include them so
# an installed `streamvis` console script works out of the box.
py-modules = ["streamvis", "http_client", "web_curses", "web_entrypoint"]
